# mixtapes

./: .gitignore  README.md  playlists.yaml  pyproject.toml
.github/workflows/: generate.yml
data/angela/: angela-s-german-hits.json
docs/: _config.yml  index.md
docs/_includes/: head-custom.html
docs/_layouts/: default.html
docs/angela/: angela-s-german-hits.md  index.md
docs/assets/css/: site.css
scripts/: generate.py
