[project]
name = "mixtapes"
version = "0.1.0"
description = "Generate verified YouTube + Markdown mixtapes from Spotify playlists."
requires-python = ">=3.11"
dependencies = [
    "spotdl>=4.2.0",
    "pyyaml>=6.0.1",
    "ytmusicapi>=1.7.0",
]

[project.scripts]
mixtape = "scripts.generate:main"

[tool.setuptools]
packages = ["scripts"]
